--- a/robo-jonbet.html
+++ b/robo-jonbet.html
@@ -96,7 +96,7 @@
     </style>
 </head>
 <body>
-    <img src="https://i.ibb.co/zVGn6P5/Rob-Jonbet.png" alt="Robô Jonbet" class="header-img">
+    <img src="https://i.ibb.co/zVGn6P5r/Rob-Jonbet.png" alt="Robô Jonbet" class="header-img">
     <h1>Robô Jonbet: O Melhor Aliado para Lucrar em Jogos Online – Review Completo</h1>
     <p>Se você está em busca de uma ferramenta revolucionária para maximizar seus lucros em jogos online, o <strong>Robô Jonbet</strong> pode ser exatamente o que você precisa. Com uma tecnologia de ponta baseada em inteligência artificial, esse robô promete transformar a forma como você opera no mercado de apostas, oferecendo até 98,5% de assertividade nos sinais. Neste artigo, vamos explorar por que o Robô Jonbet vale a pena, como ele funciona e por que ele é considerado seguro, confiável e altamente eficaz. Prepare-se para descobrir tudo sobre essa inovação que está conquistando milhares de usuários no Brasil!</p>
     
