--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </style>
 </head>
 <body>
-    <img src="https://i.ibb.co/zVGn6P5/Rob-Jonbet.png" alt="Robô Jonbet" class="header-img">
+    <img src="https://i.ibb.co/zVGn6P5r/Rob-Jonbet.png" alt="Robô Jonbet" class="header-img">
     <h1>Robô Jonbet Funciona? Vale a Pena? É Bom Mesmo? Review Completo</h1>
     <p>Você já ouviu falar do <strong>Robô Jonbet</strong> e está se perguntando se ele funciona, se vale a pena e se é bom mesmo? Neste review completo, vamos responder todas essas perguntas e mostrar por que essa ferramenta está revolucionando a forma como as pessoas lucram em jogos online. Com tecnologia de inteligência artificial e uma assertividade impressionante, o Robô Jonbet é a escolha perfeita para quem busca uma renda extra ou até uma fonte de renda principal.</p>
     
